# lernspiel.online

./: .dockerignore  .eslintrc.cjs  .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTORS.md  DEPLOYMENT.md  HACKING.md  PLANNING.md  README.md  dump.rdb  package-lock.json  package.json  pyproject.toml  tsconfig.json
_docker/: Caddyfile  Dockerfile  docker-compose.yml  lernspiel_server.entrypoint.sh  lernspiel_server.local_settings.py  lernspiel_server.start.sh
_img/: deployment-architecture.drawio
_scripts/: esbuild-bundle.js
game_sdk/: README.md  package.json
game_sdk/cli/: tsconfig.json
game_sdk/cli/src/: main.ts
game_sdk/cli/test/: hello.test.ts
game_sdk/web/: tsconfig.json
lernspiel_sdk/: package.json
lernspiel_sdk/web/src/: index.ts
lernspiel_server/: .dockerignore  README.md  manage.py
lernspiel_server/___OLD___/: game_definition.py  gamebuilder.py  gamequiz.py
lernspiel_server/_media/: .gitignore
lernspiel_server/frontend/: README.md  package.json
lernspiel_server/frontend/src/: fonts.css  index.css  index.ts
lernspiel_server/lernspiel_server/: admin.py  apps.py  asgi.py  context_processors.py  db.py  local_settings.py.template  models.py  settings.py  urls.py  views.py  wsgi.py
lernspiel_server/lernspiel_server/___gamedev/: models.py
lernspiel_server/lernspiel_server/__gamequiz/: models.py
lernspiel_server/lernspiel_server/admin/: __init__.py  custom_site.py  file_uploads.py  language.py  models.py  site.py  user.py
lernspiel_server/lernspiel_server/core_platform/: admin.py  apps.py  db.py  (+1 more)
lernspiel_server/ls_game_definition/: apps.py
lernspiel_server/ls_game_meta/: apps.py
lernspiel_server/ls_game_runtime/: apps.py  websockets.py
lernspiel_server/ls_games_core/: admin.py  apps.py  urls.py
lernspiel_server/ls_games_fortune/: apps.py  models.py  views.py
lernspiel_server/ls_games_open_world/: apps.py  models.py
lernspiel_server/ls_games_pot_of_gold/: apps.py  models.py
lernspiel_server/ls_games_quiz/: apps.py  models.py
lernspiel_server/ls_games_survey/: apps.py  models.py
lernspiel_server/ls_libraries/: apps.py
lernspiel_server/ls_pages/: apps.py  models.py
lernspiel_server/ls_ui_game_creator/: apps.py  tests.py  urls.py
lernspiel_server/ls_ui_game_player/: apps.py  urls.py  views.py
lernspiel_server/ls_ui_static_pages/: admin.py  apps.py  models.py  urls.py  views.py
(+175 files in other folders)
