[tool.poetry]
name = "lernspiel"
version = "0.1.0"
description = "Lernspiel Online: Lecture Game Platform"
authors = ["Dennis Schulmeister-Zimolong <dennis@wpvs.de>"]
homepage = "https://lernspiel.online"
repository = "https://github.com/DennisSchulmeister/lernspiel.online"
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
channels = {extras = ["daphne"], version = "^4.1.0"}
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
tox = "^4.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
